cluster-scoped-resources/config.openshift.io/ingresses/cluster.yaml
apiVersion: config.openshift.io/v1
kind: Ingress
metadata:
  creationTimestamp: "2023-03-08T12:00:18Z"
  generation: 1
  managedFields:
  - apiVersion: config.openshift.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:status:
        f:componentRoutes:
          k:{"name":"oauth-openshift","namespace":"openshift-authentication"}:
            .: {}
            f:conditions:
              k:{"type":"Degraded"}:
                .: {}
                f:lastTransitionTime: {}
                f:message: {}
                f:reason: {}
                f:status: {}
                f:type: {}
              k:{"type":"Progressing"}:
                .: {}
                f:lastTransitionTime: {}
                f:message: {}
                f:reason: {}
                f:status: {}
                f:type: {}
            f:consumingUsers: {}
            f:currentHostnames: {}
            f:defaultHostname: {}
            f:name: {}
            f:namespace: {}
            f:relatedObjects: {}
    manager: AuthenticationCustomRouteController
    operation: Apply
    subresource: status
    time: "2023-03-08T12:18:11Z"
  - apiVersion: config.openshift.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:spec:
        .: {}
        f:domain: {}
        f:loadBalancer:
          .: {}
          f:platform:
            .: {}
            f:type: {}
    manager: cluster-bootstrap
    operation: Update
    time: "2023-03-08T12:00:18Z"
  - apiVersion: config.openshift.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:status:
        .: {}
        f:defaultPlacement: {}
    manager: cluster-bootstrap
    operation: Update
    subresource: status
    time: "2023-03-08T12:00:18Z"
  name: cluster
  resourceVersion: "10747"
  uid: 503659d9-9da5-410a-ac9d-a0265de1b5de
spec:
  domain: apps.vrutkovs.choomba.one
  loadBalancer:
    platform:
      type: ""
status:
  componentRoutes:
  - conditions:
    - lastTransitionTime: "2023-03-08T12:18:11Z"
      message: 'Route not admitted: no ingress for host oauth-openshift.apps.vrutkovs.choomba.one
        in route oauth-openshift in namespace openshift-authentication'
      reason: RouteNotAdmitted
      status: "True"
      type: Progressing
    - lastTransitionTime: "2023-03-08T12:18:11Z"
      message: All is well
      reason: AsExpected
      status: "False"
      type: Degraded
    consumingUsers:
    - system:serviceaccount:oauth-openshift:authentication-operator
    currentHostnames:
    - oauth-openshift.apps.vrutkovs.choomba.one
    defaultHostname: oauth-openshift.apps.vrutkovs.choomba.one
    name: oauth-openshift
    namespace: openshift-authentication
    relatedObjects:
    - group: route.openshift.io
      name: oauth-openshift
      namespace: openshift-authentication
      resource: routes
  defaultPlacement: ControlPlane
